[package]
name = "rdb-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16", features = ["full"] }
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-postgres = "0.8"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
bytes = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
